# local-mcp-search

./: .gitignore  .local-search.example.json  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  benchmark-template.md  cpx.ps1  github行动计划.md  pyproject.toml  run-codex-resumable.ps1  run-local-mcp-search.ps1  use-local-mcp-search.ps1  工作记录_2026-04-21.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmark/: README.md  tasks.json
docs/archive/: mcp.md  功能详解.md  增强方案.md  安装部署程序方案.md
scripts/: run_benchmark.py
src/local_mcp_search/: chunking.py  cli.py  config.py  context_pack.py  embedding_client.py  exact_search.py  index_store.py  launcher.py  models.py  outline.py  repo_overview.py  reranker_client.py  retrieval.py  server.py  spans.py  symbol_search.py  watcher.py
